--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
             Good? Great!<br>
             I'm Deeptanshu, (although you probably already knew that, given how smart you are!) the guy who made this garbage.<br>
             Anyway, nice talking to you!<br>
-            Goodbye! ♥
+            <a class="underline" href="index.html">Goodbye! ♥</a>
         </p>
 	</body>
 </html>
