--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         <p style="font-family: 'Dancing Script';font-size: 32px;">
             How are you?<br>
             Good? Great!<br>
-            I'm Deeptanshu, (although you probably already knew that, given how smart you are!) the guy who made this garbage.<br>
+            I'm the guy who made this garbage!<br>
             Anyway, nice talking to you!<br>
             <a class="underline" href="index.html">Goodbye! ♥</a>
         </p>
