--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
 	</head>
 	<body style="background-color: black;color: white;margin-left: 10px;">
+	<span id="circle"></span>
         <h1 style="font-weight: normal;font-size: 64px;text-align: center;">Hellooooo!</h1>
         <p style="font-family: 'Dancing Script';font-size: 32px;">
             How are you?<br>
