--- a/credits.html
+++ b/credits.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="style.css"><span id="circle"></span>
 <div style="display: grid; place-items: center; width: 100%; height: 100%; background-color: black;">
     <div style="text-align: center;">
         <link rel="stylesheet" href="style.css">
