--- a/credits.html
+++ b/credits.html
@@ -10,3 +10,4 @@
         <h1><a class="underline" style="margin: 0px;color: white; text-decoration: none;" href="https://threejs.org/">ThreeJS</a></h1>
     </div>
 </div>
+<script src="js/init.js"></script>
