--- a/about.html
+++ b/about.html
@@ -15,5 +15,6 @@
             Anyway, nice talking to you!<br>
             <a class="underline" href="index.html">Goodbye! ♥</a>
         </p>
+	<script src="js/init.js"></script>
 	</body>
 </html>
