--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="style.css">
 	</head>
 	<body style="background-color: black;color: white;margin-left: 10px;">
-	<span id="circle"></span>
+        <span id="circle"></span>
+		<span id="smolcircle"></span>
         <h1 style="font-weight: normal;font-size: 64px;text-align: center;">Hellooooo!</h1>
         <p style="font-family: 'Dancing Script';font-size: 32px;">
             How are you?<br>
@@ -15,6 +16,6 @@
             Anyway, nice talking to you!<br>
             <a class="underline" href="index.html">Goodbye! ♥</a>
         </p>
-	<script src="js/init.js"></script>
+        <script src="js/init.js"></script>
 	</body>
 </html>
