--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<span id="circle"></span>
+		<span id="smolcircle"></span>
 		<div class="title">
 			<h1 style="grid-column: 1;grid-row: 1" id="name3" style="mix-blend-mode: exclusion;"><a class="underline" href="about.html">DEEPTANSHU</a></h1>
 		</div>
