--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<span id="circle"></span>
 		<span id="smolcircle"></span>
 		<div class="title">
-			<h1 style="grid-column: 1;grid-row: 1" id="name3" style="mix-blend-mode: exclusion;"><a class="underline" href="about.html">DEEPTANSHU</a></h1>
+			<h1 style="grid-column: 1;grid-row: 1" id="name3" style="mix-blend-mode: exclusion;"><a class="underline" style="font-weight: normal;" href="about.html" onmouseover="onHover(this)" onmouseleave="reset()">DEEPTANSHU</a></h1>
 		</div>
 		<div class="links left" id="links-left">
-			<a style="display: inline" id="link-left" href="https://www.instagram.com/deeptanshu__is__here/" data-content="INSTAGRAM">INSTAGRAM</a>
+			<a style="display: inline;" id="link-left" href="https://www.instagram.com/deeptanshu__is__here/" data-content="INSTAGRAM">INSTAGRAM</a>
 		</div>
 		<div class="links right" id="links-right">
 			<a style="display: inline;" id="link-right" href="credits.html" data-content="CREDITS">CREDITS</a>
