--- a/about.html
+++ b/about.html
@@ -39,10 +39,7 @@
             The only reason I remember this is because the road I had to take to get those medals,<br>
             was flooded with pain & misery.<br>
             <br>
-            I remember, when I first tried to get a medal for the Maths Olympiad in Class IV,<br>
-            my dad undertook the task of teaching me, and I'm pretty sure I didn't win anything.<br>
-            Next year, he didn't bother because he felt his efforts were wasted, and I got Gold and Silver in Science and Maths lol!<br>
-            The only reason I got silver in Maths is because me and the person who came first both got equal marks,<br>
+            The only reason I got second place in the Maths Olympiad is because me and the person who came first both got equal marks,<br>
             just that, I got more marks attempting the simpler questions, and he got more marks from attempting the more complex ones.<br>
             The most annoying part about this was that I couldn't argue with the fact that he was more deserving of the medal,<br>
             even though we both got the same marks.<br>
