--- a/about.html
+++ b/about.html
@@ -8,48 +8,10 @@
 	<body style="background-color: black;color: white;margin-left: 10px;margin-right: 10px;overflow: auto;">
         <span id="circle"></span>
 		<span id="smolcircle"></span>
-        <h1 style="font-weight: normal;font-size: 64px;text-align: center;font-family: 'Dancing Script', cursive;">Ughhh</h1>
+        <h1 style="font-weight: normal;font-size: 64px;text-align: center;font-family: 'Dancing Script', cursive;">ag3rhuo0;esvfc bjlxnk</h1>
         <p style="font-family: 'Dancing Script', cursive;font-size: 32px;">
-            I'm pretty sure this falls under the category of "Personal Website" and therefore,<br>
-            it needs an "About Page".<br>
-            So this is my "About Page"<br>
-            <br>
-            After going through other personal websites, I've gathered that I need to write about my interests,<br>
-            what I wish to achieve in life, what I have achieved in life.<br>
-            <br>
-            There's just one problem:<br>
-            I don't really have any interests. Like, one day, I could be interested in 3D modelling,<br>
-            the next day, it could be music, or speedrunning, or programming, or not having a K/D ratio less than 1 in CS:GO.<br>
-            <br>
-            What do I wish to achieve in life? Ummm... no idea!<br>
-            I guess as a kid, I should probably write about what I want to be when I grow up,<br>
-            but, I don't know what I want to be when I grow up.<br>
-            There's just so many things.<br>
-            However, when my Physics teacher checked and returned my notebook, he did write "Good" but in such a way that it looked like he had written "God".<br>
-            And Spotify did recommend me a song titled "Become God", so maybe I won't have to worry about that.<br>
-            The song was by GHOST DATA, btw.<br>
-            <br>
-            Oh, and about the things I have achieved so far:<br>
-            Idk.<br>
-            There are some certificates that I got for the guitar,<br>
-            there are also the S.O.F. Olympiads, I got a gold in Science in Class V.<br>
-            I should've gotten a silver in Maths as I came second, but I didn't get it.<br>
-            Also a bronze in either Maths or Science in Class VI.<br>
-            But for some reason, my classmate who got a bronze in English (or maybe it was G.K.), got his medal.<br>
-            The only reason I remember this is because the road I had to take to get those medals,<br>
-            was flooded with pain & misery.<br>
-            <br>
-            The only reason I got second place in the Maths Olympiad is because me and the person who came first both got equal marks,<br>
-            just that, I got more marks attempting the simpler questions, and he got more marks from attempting the more complex ones.<br>
-            The most annoying part about this was that I couldn't argue with the fact that he was more deserving of the medal,<br>
-            even though we both got the same marks.<br>
-            I got a bronze is Class VI, I forgot in which subject, but that's still good I guess.<br>
-            I got nothing in Classes VII and VIII, but that's probably because the exam was online,<br>
-            and I lost the will to live halfway through the exams, so I half-assed most of the questions.<br>
-            <br><br>
-            Anyway, thanks for attending my Ted Talk.<br>
-            And remember, stay in school, smoke crack, and until next time,<br>
-            <a class="underline" href="index.html">Gooooooodbyeeeeee! ♥</a>
+            iewufhjakbsc 2387irquwf shc9eawuisdkj fg2q39uriwei rhq42u9weittg t4927q3i49238qeydc7weugifh2983owredc<br>
+            <a class="underline" href="index.html">♥</a>
         </p>
         <script src="js/init.js"></script>
 	</body>
