--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<span id="circle"></span>
 		<span id="smolcircle"></span>
 		<div class="title">
-			<h1 id="glow" style="grid-column: 1;grid-row: 1" id="name3" style="mix-blend-mode: exclusion;"><a class="underline" style="font-weight: normal;" href="about.html" onmouseover="onHover(this)" onmouseleave="reset()">F Labs</a></h1>
+			<h1 id="glow" style="grid-column: 1;grid-row: 1" id="name3" style="mix-blend-mode: exclusion;"><a class="underline" style="font-weight: normal;" href="about.html" onmouseover="onHover(this)" onmouseleave="reset()">DEEPTANSHU</a></h1>
 		</div>
 		<div class="links left" id="links-left">
 			<a style="display: inline;" id="link-left" href="https://www.instagram.com/deeptanshu__is__here/" data-content="INSTAGRAM">INSTAGRAM</a>
