--- a/garbaj.html
+++ b/garbaj.html
@@ -22,7 +22,10 @@
         </p>
         <p style="font-family: 'Dancing Script', cursive;font-size: 32px;text-shadow: 0 0 10px black, 0 0 20px black, 0 0 30px black, 0 0 40px black, 0 0 50px black, 0 0 60px black, 0 0 70px black;" class="hover">
             <a style="font-size: 50px;" class="underline" href="https://github.com/thisisdeeptanshu/Words">Crashbandit 3.0</a><br>
-            Unlimited Power
+            <a class="underline" href="https://www.youtube.com/watch?v=3aLyiI2odhU">Infinite Power!</a><br>
+        </p>
+        <p style="font-family: 'Dancing Script', cursive;font-size: 32px;text-shadow: 0 0 10px black, 0 0 20px black, 0 0 30px black, 0 0 40px black, 0 0 50px black, 0 0 60px black, 0 0 70px black;" class="hover">
+            <a style="font-size: 50px;" class="underline" href="https://github.com/thisisdeeptanshu/Infinite-Ammo">Infinite Ammo</a><br>
         </p>
         <p style="font-family: 'Dancing Script', cursive;font-size: 32px;text-shadow: 0 0 10px black, 0 0 20px black, 0 0 30px black, 0 0 40px black, 0 0 50px black, 0 0 60px black, 0 0 70px black;" class="hover">
             <a class="underline" href="index.html">Le back</a>
