--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<a style="display: inline;" id="link-right" href="credits.html" data-content="CREDITS">CREDITS</a>
 		</div>
 		<div class="links" style="bottom: 0px;" id="links-normal">
-			<a style="display: inline" id="link-normal" href="garbaj.html" data-content="garbaj">garbaj</a>
+			<a style="display: inline;" id="link-normal" href="garbaj.html" data-content="garbaj">garbaj</a>
 		</div>
 		<script src="https://threejs.org/build/three.js"></script>
         <script src="js/script.js"></script>
