--- a/garbaj.html
+++ b/garbaj.html
@@ -28,6 +28,10 @@
             <a style="font-size: 50px;" class="underline" href="https://github.com/thisisdeeptanshu/Infinite-Ammo">Infinite Ammo</a><br>
         </p>
         <p style="font-family: 'Dancing Script', cursive;font-size: 32px;text-shadow: 0 0 10px black, 0 0 20px black, 0 0 30px black, 0 0 40px black, 0 0 50px black, 0 0 60px black, 0 0 70px black;" class="hover">
+            <a style="font-size: 50px;" class="underline" href="https://www.youtube.com/watch?v=Ydpep4P-LzQ">F.O.O.L</a><br>
+            <a class="underline" href="https://github.com/thisisdeeptanshu/F.O.O.L">we do a bit of trolling</a><br>
+        </p>
+        <p style="font-family: 'Dancing Script', cursive;font-size: 32px;text-shadow: 0 0 10px black, 0 0 20px black, 0 0 30px black, 0 0 40px black, 0 0 50px black, 0 0 60px black, 0 0 70px black;" class="hover">
             <a class="underline" href="index.html">Le back</a>
         </p>
         <script src="js/init.js"></script>
