--- a/garbaj.html
+++ b/garbaj.html
@@ -8,7 +8,7 @@
 	<body style="color: white;margin-left: 10px;margin-right: 10px;overflow: auto;background-image: url('images/3.png');text-align: left;" id="body2">
         <span id="circle"></span>
 		<span id="smolcircle"></span>
-        <h1 style="font-weight: normal;font-size: 64px;font-family: 'Dancing Script', cursive;">Some stuff I've made</h1>
+        <h1 style="font-weight: normal;font-size: 64px;font-family: 'Dancing Script', cursive;">Stuff I've made</h1>
         <p style="font-family: 'Dancing Script', cursive;font-size: 32px;text-shadow: 0 0 10px black, 0 0 20px black, 0 0 30px black, 0 0 40px black, 0 0 50px black, 0 0 60px black, 0 0 70px black;" class="hover">
             <a style="font-size: 50px;" class="underline" href="https://github.com/thisisdeeptanshu/thisisdeeptanshu.github.io">This</a><br>
         </p>
